<resources>
    <string name="app_name">ToDoList</string>
    <string name="todo_list_label">To Do List</string>
    <string name="create_todo_label">Create To Do</string>
    <string name="details_todo_label">Details To Do</string>

    <string name="name_label">Name</string>
    <string name="date_label">Date</string>
    <string name="duration_label">Duration</string>
    <string name="description_label">Description</string>

    <string name="details_button_text">Details</string>
    <string name="delete_button_text">Delete</string>
    <string name="edit_button_text">Edit</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_button_text">Save</string>
    <string name="create_button_text">Create</string>

    <string name="empty_message">No To Do\'s found</string>
</resources>